--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="main.css" />
     <script src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@1,300&family=Dancing+Script:wght@400..700&family=Grechen+Fuemen&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="javascript">Javascript Sprint</div>
-    <h1>Biodun is quite reliable</h1>
+    <h1 class="name">Biodun is quite reliable</h1>
   </body>
 </html>
