--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
       href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@1,300&family=Dancing+Script:wght@400..700&family=Grechen+Fuemen&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="javascript">Javascript Sprint</div>
     <h1 class="name">Biodun is quite reliable</h1>
+    <i class="fa-solid fa-calendar"></i>
   </body>
 </html>
