--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <body>
     <div class="javascript">Javascript Sprint</div>
     <h1 class="name">Biodun is quite reliable</h1>
+    <div class="name-cont">
+      <h1 class="names">Biodun is quite Strong</h1>
+    </div>
     <i class="fa-solid fa-calendar"></i>
     <script src="script.js"></script>
   </body>
