--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="main.css" />
-
-    <script src="script.js"></script>
   </head>
   <body>
-    <div class="javascript">Javascript Sprint</div>
-    <h1 class="name">Biodun is quite reliable</h1>
+    <h1>GUESS MY SECRET NUMBER</h1>
+    <h2>Guess between 1 and 20</h2>
+    <input type="number" class="guess" />
+    <button class="check">Check my guess</button>
+    <h2 class="message">Start guessing</h2>
+    <script src="script.js"></script>
   </body>
 </html>
