--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>GUESS MY SECRET NUMBER</h1>
     <h2>Guess between 1 and 20</h2>
+    <h1 class="secNum">?</h1>
     <input type="number" class="guess" />
     <button class="check">Check my guess</button>
     <h2 class="message">Start guessing</h2>
