--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>GUESS MY SECRET NUMBER</h1>
+    <button class="again">Play Again</button>
     <h2>Guess between 1 and 20</h2>
     <h1 class="secNum">?</h1>
     <input type="number" class="guess" />
