--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1>GUESS MY SECRET NUMBER</h1>
-    <h2>Guess between 1 and 20</h2>
-    <h3 class="hiddenNumber">???</h3>
-    <input type="number" class="guess" />
-    <button class="check">Check my guess</button>
-    <h2 class="message">Start guessing</h2>
-    <h4 class="ins">Read Instruction again</h4>
-    <button class="playAgain">Play Again</button>
+    <h1>javascript sprint</h1>
     <script src="script.js"></script>
   </body>
 </html>
