--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1>javascript sprint</h1>
+    <div>
+      <h1>javascript sprint</h1>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
