--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div>
-      <h1>javascript sprint</h1>
-    </div>
+    <h1>some amazing cat facts</h1>
+    <p id="catFact">loading the fact ..........</p>
+    <button id="newFactBtn">Fetch Another fact</button>
+
+    <section>
+      <h1>Checking Ages</h1>
+      <form id="wrappingForm">
+        <label> Name: </label>
+        <input type="text" id="name" name="name" value="Yetunde" />
+        <br />
+        <button type="submit">Predict Age</button>
+      </form>
+      <h3 id="result"></h3>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
